--- a/.config/waybar/colors-waybar.css
+++ b/.config/waybar/colors-waybar.css
@@ -2,7 +2,7 @@
 * Css Colors
 * Generated with Matugen
 */
-@define-color background rgba(18, 19, 24, 1.0);
-@define-color surface #1f1f25;
-@define-color foreground #e3e1e9;
-@define-color primary #b8c3ff;
+@define-color background rgba(14, 21, 20, 1.0);
+@define-color surface #1a2120;
+@define-color foreground #dde4e2;
+@define-color primary #80d5cf;
