--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -1,31 +1,32 @@
+@import "colors.css";
 * {
   all: unset;
   font-size: 14px;
-  font-family: "Product Sans";
+  font-family: "SF Pro Display";
   transition: 200ms;
 }
 
 trough highlight {
-  background: #cad3f5;
+  background: @foreground;
 }
 
 scale trough {
   margin: 0rem 1rem;
-  background-color: #363a4f;
+  background-color: @surface_high;
   min-height: 8px;
   min-width: 70px;
 }
 
 slider {
-  background-color: #8aadf4;
+  background-color: @primary;
 }
 
 .floating-notifications.background .notification-row .notification-background {
-  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px #363a4f;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px @primary;
   border-radius: 12.6px;
   margin: 18px;
-  background-color: #24273a;
-  color: #cad3f5;
+  background-color: @bg;
+  color: @foreground;
   padding: 0;
 }
 
@@ -43,15 +44,15 @@ slider {
 }
 
 .floating-notifications.background .notification-row .notification-background .notification .notification-content .summary {
-  color: #cad3f5;
+  color: @foreground;
 }
 
 .floating-notifications.background .notification-row .notification-background .notification .notification-content .time {
-  color: #a5adcb;
+  color: @fg;
 }
 
 .floating-notifications.background .notification-row .notification-background .notification .notification-content .body {
-  color: #cad3f5;
+  color: @foreground;
 }
 
 .floating-notifications.background .notification-row .notification-background .notification > *:last-child > * {
@@ -60,81 +61,81 @@ slider {
 
 .floating-notifications.background .notification-row .notification-background .notification > *:last-child > * .notification-action {
   border-radius: 7px;
-  color: #cad3f5;
-  background-color: #363a4f;
-  box-shadow: inset 0 0 0 1px #494d64;
+  color: @foreground;
+  background-color: @surface_high;
+  box-shadow: inset 0 0 0 1px @shadow;
   margin: 7px;
 }
 
 .floating-notifications.background .notification-row .notification-background .notification > *:last-child > * .notification-action:hover {
-  box-shadow: inset 0 0 0 1px #494d64;
-  background-color: #363a4f;
-  color: #cad3f5;
+  box-shadow: inset 0 0 0 1px @shadow;
+  background-color: @surface_high;
+  color: @foreground;
 }
 
 .floating-notifications.background .notification-row .notification-background .notification > *:last-child > * .notification-action:active {
-  box-shadow: inset 0 0 0 1px #494d64;
+  box-shadow: inset 0 0 0 1px @shadow;
   background-color: #7dc4e4;
-  color: #cad3f5;
+  color: @foreground;
 }
 
 .floating-notifications.background .notification-row .notification-background .close-button {
   margin: 7px;
   padding: 2px;
   border-radius: 6.3px;
-  color: #24273a;
+  color: @bg;
   background-color: #ed8796;
 }
 
 .floating-notifications.background .notification-row .notification-background .close-button:hover {
   background-color: #ee99a0;
-  color: #24273a;
+  color: @bg;
 }
 
 .floating-notifications.background .notification-row .notification-background .close-button:active {
   background-color: #ed8796;
-  color: #24273a;
+  color: @bg;
 }
 
 .control-center {
-  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px #363a4f;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px @surface_high;
   border-radius: 12.6px;
   margin: 18px;
-  background-color: #24273a;
-  color: #cad3f5;
+  background-color: @bg;
+  color: @foreground;
   padding: 14px;
 }
 
 .control-center .widget-title > label {
-  color: #cad3f5;
+  color: @foreground;
   font-size: 1.3em;
 }
 
 .control-center .widget-title button {
   border-radius: 7px;
-  color: #cad3f5;
-  background-color: #363a4f;
-  box-shadow: inset 0 0 0 1px #494d64;
+  color: @foreground;
+  background-color: @surface_high;
+  box-shadow: inset 0 0 0 1px @shadow;
   padding: 8px;
 }
 
 .control-center .widget-title button:hover {
-  box-shadow: inset 0 0 0 1px #494d64;
+  box-shadow: inset 0 0 0 1px @shadow;
   background-color: #5b6078;
-  color: #cad3f5;
+  color: @foreground;
 }
 
 .control-center .widget-title button:active {
-  box-shadow: inset 0 0 0 1px #494d64;
+  box-shadow: inset 0 0 0 1px @shadow;
   background-color: #7dc4e4;
-  color: #24273a;
+  color: @bg;
 }
 
 .control-center .notification-row .notification-background {
   border-radius: 7px;
-  color: #cad3f5;
-  background-color: #363a4f;
-  box-shadow: inset 0 0 0 1px #494d64;
+  color: @foreground;
+  background-color: @surface_high;
+  box-shadow: inset 0 0 0 1px @shadow;
   margin-top: 14px;
 }
 
@@ -152,15 +153,15 @@ slider {
 }
 
 .control-center .notification-row .notification-background .notification .notification-content .summary {
-  color: #cad3f5;
+  color: @foreground;
 }
 
 .control-center .notification-row .notification-background .notification .notification-content .time {
-  color: #a5adcb;
+  color: @fg;
 }
 
 .control-center .notification-row .notification-background .notification .notification-content .body {
-  color: #cad3f5;
+  color: @foreground;
 }
 
 .control-center .notification-row .notification-background .notification > *:last-child > * {
@@ -169,29 +170,29 @@ slider {
 
 .control-center .notification-row .notification-background .notification > *:last-child > * .notification-action {
   border-radius: 7px;
-  color: #cad3f5;
-  background-color: #181926;
-  box-shadow: inset 0 0 0 1px #494d64;
+  color: @foreground;
+  background-color: @surface;
+  box-shadow: inset 0 0 0 1px @shadow;
   margin: 7px;
 }
 
 .control-center .notification-row .notification-background .notification > *:last-child > * .notification-action:hover {
-  box-shadow: inset 0 0 0 1px #494d64;
-  background-color: #363a4f;
-  color: #cad3f5;
+  box-shadow: inset 0 0 0 1px @shadow;
+  background-color: @surface_high;
+  color: @foreground;
 }
 
 .control-center .notification-row .notification-background .notification > *:last-child > * .notification-action:active {
-  box-shadow: inset 0 0 0 1px #494d64;
+  box-shadow: inset 0 0 0 1px @shadow;
   background-color: #7dc4e4;
-  color: #cad3f5;
+  color: @foreground;
 }
 
 .control-center .notification-row .notification-background .close-button {
   margin: 7px;
   padding: 2px;
   border-radius: 6.3px;
-  color: #24273a;
+  color: @bg;
   background-color: #ee99a0;
 }
 
@@ -201,24 +202,24 @@ slider {
 
 .control-center .notification-row .notification-background .close-button:hover {
   background-color: #ed8796;
-  color: #24273a;
+  color: @bg;
 }
 
 .control-center .notification-row .notification-background .close-button:active {
   background-color: #ed8796;
-  color: #24273a;
+  color: @bg;
 }
 
 .control-center .notification-row .notification-background:hover {
-  box-shadow: inset 0 0 0 1px #494d64;
+  box-shadow: inset 0 0 0 1px @shadow;
   background-color: #8087a2;
-  color: #cad3f5;
+  color: @foreground;
 }
 
 .control-center .notification-row .notification-background:active {
-  box-shadow: inset 0 0 0 1px #494d64;
+  box-shadow: inset 0 0 0 1px @shadow;
   background-color: #7dc4e4;
-  color: #cad3f5;
+  color: @foreground;
 }
 
 .notification.critical progress {
@@ -233,17 +234,17 @@ slider {
 .control-center-dnd {
   margin-top: 5px;
   border-radius: 8px;
-  background: #363a4f;
-  border: 1px solid #494d64;
+  background: @surface_high;
+  border: 1px solid @shadow;
   box-shadow: none;
 }
 
 .control-center-dnd:checked {
-  background: #363a4f;
+  background: @surface_high;
 }
 
 .control-center-dnd slider {
-  background: #494d64;
+  background: @shadow;
   border-radius: 8px;
 }
 
@@ -255,23 +256,23 @@ slider {
 .widget-dnd > switch {
   font-size: initial;
   border-radius: 8px;
-  background: #363a4f;
-  border: 1px solid #494d64;
+  background: @surface_high;
+  border: 1px solid @shadow;
   box-shadow: none;
 }
 
 .widget-dnd > switch:checked {
-  background: #363a4f;
+  background: @surface_high;
 }
 
 .widget-dnd > switch slider {
-  background: #494d64;
+  background: @shadow;
   border-radius: 8px;
   border: 1px solid #6e738d;
 }
 
 .widget-mpris .widget-mpris-player {
-  background: #363a4f;
+  background: @surface_high;
   padding: 7px;
 }
 
@@ -295,11 +296,11 @@ slider {
 .power-buttons button:hover,
 .powermode-buttons button:hover,
 .screenshot-buttons button:hover {
-  background: #363a4f;
+  background: @surface_high;
 }
 
 .control-center .widget-label > label {
-  color: #cad3f5;
+  color: @foreground;
   font-size: 2rem;
 }
 
@@ -321,7 +322,7 @@ slider {
 }
 
 .widget-volume trough highlight {
-  background: #7dc4e4;
+  background: @primary;
 }
 
 .widget-backlight trough highlight {
@@ -340,3 +341,4 @@ slider {
 .image {
   padding-right: 0.5rem;
 }
+
