adding autoreload script

--- a/.config/waybar/colors-waybar.css
+++ b/.config/waybar/colors-waybar.css
@@ -2,7 +2,7 @@
 * Css Colors
 * Generated with Matugen
 */
-@define-color background rgba(14, 21, 20, 1.0);
-@define-color surface #1a2120;
-@define-color foreground #dde4e2;
-@define-color primary #80d5cf;
+@define-color background rgba(20, 19, 17, 1.0);
+@define-color surface #20201d;
+@define-color foreground #e6e2dd;
+@define-color primary #cac8ad;
